--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ width: 48%;
 <div class="header" >Youtube Downloader</div>
 
 <div class="input" >
-<input type="text" value="https://m.youtube.com/shorts/WpADyN4oqPM"   placeholder="Enter Your URL"  id="url"  />
+<input type="text" value=""   placeholder="Enter Your URL"  id="url"  />
 <button onclick="download()">
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" viewBox="0 0 16 16">
 <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
